[package]
name = "find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.79"
regex = "1.10.3"
walkdir = "2.4.0"

[dev-dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"
