[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "http-server"
path = "src/main.rs"

[[bin]]
name = "actix-web"
path = "src/actix/main.rs"


[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
regex = "1.9.5"
serde = {version="1.0.194",features=["derive"]}
serde_json = "1.0.110"
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono", "serde_yaml"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }

